2002-05-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d: Bug #532216 fixed. All of pop3d now has a testsuite.

2002-05-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3d: Added testsuites for user database and simple mailbox
	  storage.

	* fileutil: SF Bug #462015 closed. Proosed change rejected, added
	  new commands to perform the desired operation instead.

2002-05-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools: Fixed bug #534334 (actually more a FR).

	* examples/csv/csvdiff: Applied patch associated with tcllib SF
	  bug #551133. Bug reported by <lvirden@users.sourceforge.net>,
	  patch by <dgp@users.sourceforge.net>.

	  Accepted FR #551127 and added code implementing the feature.

2002-05-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct (tree): Accepted FR #552972.

	* mime: Fixed bugs #539952, #553784.

2002-05-08  Don Porter <dgp@users.sourceforge.net>

	* all.tcl: Show full stack trace when an error occurs sourcing
	a test file.

2002-04-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cmdline: Accepted patch #540313

	* examples/ftp/hpupdate.tcl: Accepted patch #548221 by Larry
	  Virden <lvirden@users.sourceforge.net>.
	  Fixed bug #548224 (Touch).

	* base64: Fixed bug #548112.

2002-04-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools: Fixed bug #527025.

	* smtp (mime): Fixed bug #547336.

2002-04-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (dist): Ensured that the deprecated module 'stats'
	  is not distributed anymore. Use 'counter' instead.
	  (*-force): Enforced generation of documentation, for developers.

2002-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (MODULES): Added irc module.

2002-04-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mime: Fixed bug #533025.
